--- a/ChangeLog
+++ b/ChangeLog
@@ -1946,3 +1946,7 @@ Versions 5.31.0 - 5.31.v
 - Version 5.31.5
 	- Rare crash bugs fixed. These bugs appeared when removing a teacher/students set with attached constraints not available. Reported by Benahmed Abdelkrim.
 	- Updated the Arabic translation, by Benahmed Abdelkrim.
+- Version 5.31.6
+	- Bug fix (if there were used subjects containing the special characters &, ", >, <, and ', and if there were teachers having as qualified subjects
+	these subjects, FET could not open the .fet data file anymore) - reported by bart.leyen.
+	- Updated the Arabic translation, by Benahmed Abdelkrim.
