--- a/ChangeLog
+++ b/ChangeLog
@@ -1950,3 +1950,11 @@ Versions 5.31.0 - 5.31.v
 	- Bug fix (if there were used subjects containing the special characters &, ", >, <, and ', and if there were teachers having as qualified subjects
 	these subjects, FET could not open the .fet data file anymore) - reported by bart.leyen.
 	- Updated the Arabic translation, by Benahmed Abdelkrim.
+- Version 5.31.7
+	- Updated to Qt 5.9.1.
+	- Added filters in the following constraints for activities: same starting day, same starting hour, two activities ordered, two activities consecutive,
+	two activities grouped, three activities grouped (suggested by math).
+	- Added the possibility to swap the two selected activities in the add/modify constraint dialogs for the constraints of type two activities ordered and
+	two activities consecutive (suggested by math).
+	- Updated the German translation, by Volker Dirr.
+	- Updated the Arabic translation, by Benahmed Abdelkrim.
