--- a/THANKS
+++ b/THANKS
@@ -504,4 +504,6 @@ math - suggestion.
 
 s.lanore - suggestion.
 
-rbnsn - bug report.
+Robinson A. Lemos - bug report.
+
+Maurino C. Maria - bug report.
