Upgrade to FET 5.32.1

--- a/ChangeLog
+++ b/ChangeLog
@@ -1968,4 +1968,9 @@ Versions 5.32.0 - 5.32.v
 - Version 5.32.0
 	- Implemented the teachers' and students' timetable view time horizontal from the FET interface, for easier locking/unlocking/generating a partially locked timetable.
 	Suggested by Vangelis Karafillidis, who did a great job with his useful suggestions and reports. Also Volker Dirr had some useful suggestions for this new feature.
-	- Added the en_GB (British English) locale, so that the date/time in the generated timetables can be shown in British format (suggested by rjmillett).
+	- Added the en_GB (British English) locale, so that the date/time in the generated timetables can be shown in British format (suggested by rjmillett. It was also
+	previously suggested by Mr Robo).
+- Version 5.32.1
+	- Corrected a few compilation errors on older compilers (reported by Valdo, fixed by rodolforg and Liviu Lalescu).
+	- Implemented the rooms' timetable view time horizontal from the FET interface (suggested by sigit_yuwono).
+	- In the timetable view time horizontal dialogs the activities which are locked in space are shown with an italic font (suggested by Vangelis Karafillidis).
