--- a/THANKS
+++ b/THANKS
@@ -507,3 +507,7 @@ s.lanore - suggestion.
 Robinson A. Lemos - bug report.
 
 Maurino C. Maria - bug report.
+
+Valdo - bug report.
+
+sigit_yuwono - suggestion.
