--- a/TODO
+++ b/TODO
@@ -5459,3 +5459,8 @@ When creating timetables for students in the final two years of high school, I t
 
 It would be easier to find student names (to remove them from one activity group, then add them to another) if there were a button that would allow me to sort
 the selected groups from the Modify Activity screen (perhaps below the Clear button?).
+
+327---------------------------------------------------------
+From Zsolt Udvari (on forum):
+
+Add a subject tag for each subject (like: "easy" or "hard") and add time constraints for these subject tags.
